--- a/sheeesh/Makefile
+++ b/sheeesh/Makefile
@@ -13,9 +13,22 @@ OBJ = $(SRC:.cpp=.o)
 OBJ_PREF := $(addprefix $(OBJ_DIR), $(OBJ))
 
 $(NAME): $(OBJ_PREF) $(OBJ_DIR)
-	@$(CXX) $(CXXFLAGS) $(OBJ_PREF) -I$(HEADER_DIR) $(LIBS) -o $@
-	@echo "Success, ./$(NAME) created"
+	$(CXX) $(CXXFLAGS) $(OBJ_PREF) -I$(HEADER_DIR) $(LIBS) -o $@
 
 $(OBJ_PREF): .build/%.o: src/%.cpp
 	@mkdir -p $(OBJ_DIR)
-	@$(CXX) $(CXXFLAGS) -c
+	@$(CXX) $(CXXFLAGS) -c $< -o $@ -I$(HEADER_DIR)
+
+all: $(NAME)
+
+clean:
+	@$(RM) $(OBJ_DIR)
+
+fclean: clean
+	@$(RM) $(NAME)
+	@echo "Success, directory cleaned"
+
+re: fclean all
+
+
+.PHONY: all clean fclean re
