--- a/sheeesh/Makefile
+++ b/sheeesh/Makefile
@@ -1,6 +1,6 @@
 NAME = webshit
 CXX = c++
-CXXFLAGS = -Wall -Werror -Wextra -std=c++98
+CXXFLAGS = -Wall -Werror -Wextra -g -std=c++98
 
 HEADER_DIR = ./header
 SRC_DIR = ./src/
