fix request and do response next

--- a/sheeesh/Makefile
+++ b/sheeesh/Makefile
@@ -8,8 +8,7 @@ OBJ_DIR = ./.build/
 LIBS = -lm
 RM = rm -rf
 
-SRC = main.cpp utils.cpp setServer.cpp connectClients.cpp HandleClientRequest.cpp
- #serverResponse.cpp
+SRC = main.cpp utils.cpp setServer.cpp connectClients.cpp Request.cpp Response.cpp
 
 OBJ = $(SRC:.cpp=.o)
 OBJ_PREF := $(addprefix $(OBJ_DIR), $(OBJ))
