fixed header files (double incl)

--- a/sheeesh/Makefile
+++ b/sheeesh/Makefile
@@ -8,17 +8,17 @@ OBJ_DIR = ./.build/
 LIBS = -lm
 RM = rm -rf
 
-SRC = main.cpp utils.cpp setServer.cpp connectClients.cpp Request.cpp Response.cpp
+SRC = main.cpp utils.cpp setServer.cpp connectClients.cpp Request.cpp Response.cpp Error.cpp
 
 OBJ = $(SRC:.cpp=.o)
 OBJ_PREF := $(addprefix $(OBJ_DIR), $(OBJ))
 
 $(NAME): $(OBJ_PREF) $(OBJ_DIR)
-	$(CXX) $(CXXFLAGS) $(OBJ_PREF) -I$(HEADER_DIR) $(LIBS) -o $@
+	$(CXX) $(CXXFLAGS) $(OBJ_PREF) -I $(HEADER_DIR) $(LIBS) -o $@
 
 $(OBJ_PREF): .build/%.o: src/%.cpp
 	@mkdir -p $(OBJ_DIR)
-	@$(CXX) $(CXXFLAGS) -c $< -o $@ -I$(HEADER_DIR)
+	@$(CXX) $(CXXFLAGS) -c $< -o $@ -I $(HEADER_DIR)
 
 all: $(NAME)
 
