server works on different hardcoded ports:))))

--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -19,7 +19,7 @@ server {
 
 
 
-    PATH_DEFAULTWEBSITE root/index.html
+    PATH_DEFAULTWEBSITE root/bla/index.html
     INDEX_PAGE          index_page_blabla
     ROOT_FOLDER         root/
     AUTOINDEX           true
