implemented getter for methods

--- a/default.conf
+++ b/default.conf
@@ -1,11 +1,11 @@
 timeout = 60
 max_clients = 100
-buff_size = 9000
+body_size = 9000
 max_events = 100
 backlog = 10
 
 [server]
-	port = 81;
+	port = 81
 	server_name = www.example.com example.com # list
 	body_size = 500
 	error_page 404 = data/status_codes/404.html #map errorcode/path TODO VF check file, if code not defined use template
@@ -13,20 +13,23 @@ backlog = 10
 	</>
 		# root = tmp/html # currently not planned
 		methods = GET POST # list
-		autoindex = on
+		autoindex = true
 		index = index2.html
 		cgi = .py
+		redirect = test32/e32/
 	<\/>
 	# <test>
 	# <\test>
-	<upload>
-		root = tmp/html/upload
-		methods = DELETE GET POST
-		redirect = test # TODO VF replace path with redirect value and append file from requested url
-	<\upload>
+	<images>
+		# root = tmp/html/upload
+		methods = DELETE POST GET 
+		autoindex = on
+		redirect = index.html # TODO VF replace path with redirect value and append file from requested url
+	<\images>
 [\server]
 
 
 [server]
+	port = 80
 	host = 0.0.0.0
 [\server]
