implemented all getters

--- a/default.conf
+++ b/default.conf
@@ -21,6 +21,7 @@ backlog = 10
 	# <test>
 	# <\test>
 	<images>
+		index = index2.html
 		# root = tmp/html/upload
 		methods = DELETE POST GET 
 		autoindex = on
