--- a/default.conf
+++ b/default.conf
@@ -8,7 +8,7 @@ backlog = 10
 	port = 81
 	server_name = www.example.com example.com # list
 	body_size = 500
-	error_page 404 = data/status_codes/404.html #map errorcode/path TODO VF check file, if code not defined use template
+	error_page 404 = data/status_codes/404.html
 	error_page 500 = data/status_codes/500.html
 	</>
 		# root = tmp/html # currently not planned
@@ -25,7 +25,7 @@ backlog = 10
 		# root = tmp/html/upload
 		methods = DELETE POST GET 
 		autoindex = on
-		redirect = index.html # TODO VF replace path with redirect value and append file from requested url
+		redirect = index.html
 	<\images>
 [\server]
 
