refactored and updated default.conf

--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,24 @@
+# blueprint of possible directives:
+# global
+# 	timeout
+# 	max_clients
+# 	body_size
+# 	max_events
+# 	backlog
+# server
+# 	port
+# 	host
+#	root (not implemented)
+# 	server_name (not used)
+#	body_size
+# 	error_page
+# location
+# 	methods
+# 	autoindex
+# 	index
+# 	cgi
+# 	redirect
+
 timeout = 60
 max_clients = 100
 body_size = 9000
@@ -5,35 +26,27 @@ max_events = 100
 backlog = 10
 
 [server]
-	port = 1010
-; 	server_name = www.example.com example.com # list
-	body_size = 500
-; 	index = index.html
-    error_page 404 = new404.html
-; 	</>
-; 		# root = tmp/html # currently not planned
-; 		methods = GET POST # list
-; 		autoindex = true
-; 		index = index.html
-; 		cgi = .py
-; 		redirect = index.html
-; 	<\/>
-	# <test>
-	# <\test>
-; 	<images>
-; 		index = index.html
-; 		# root = tmp/html/upload
-; 		methods = DELETE POST GET
-; 		autoindex = on
-; 		redirect = images/smiling_dog.jpeg
-; 	<\images>
+	port = 8080
+	</>
+		methods = GET
+	<\/>
+	<upload>
+		methods = GET POST DELETE
+	<\upload>
+	<scripts>
+		methods = GET POST
+	<\scripts>
 [\server]
-
 
 [server]
-	port = 7070
-	host = 0.0.0.0
+	port = 8081
+	</>
+		methods = GET
+	<\/>
+	<upload>
+		methods = GET POST DELETE
+	<\upload>
+	<scripts>
+		methods = GET POST
+	<\scripts>
 [\server]
-
-image/avif,image/webp, image/apng,image/svg+xml,image/*
-image/avif,image/webp
