--- a/default.conf
+++ b/default.conf
@@ -27,7 +27,9 @@ backlog = 10
 
 [server]
 	port = 8080
+    body_size = 7777
 	</>
+
 		methods = GET
 	<\/>
 	<upload>
@@ -40,6 +42,7 @@ backlog = 10
 
 [server]
 	port = 8081
+    body_size = 6666
 	</>
 		methods = GET
 	<\/>
