AHHHHHH everything works, using only one send, tested with 6 different server at same time & uploading huuge files at the same time & loading at the same time different pages ===> never blocks/crashes/etc

--- a/default.conf
+++ b/default.conf
@@ -53,3 +53,55 @@ backlog = 10
 		methods = GET POST
 	<\scripts>
 [\server]
+[server]
+	port = 8082
+    body_size = 6666
+	</>
+		methods = GET
+	<\/>
+	<upload>
+		methods = GET POST DELETE
+	<\upload>
+	<scripts>
+		methods = GET POST
+	<\scripts>
+[\server]
+[server]
+	port = 8083
+    body_size = 6666
+	</>
+		methods = GET
+	<\/>
+	<upload>
+		methods = GET POST DELETE
+	<\upload>
+	<scripts>
+		methods = GET POST
+	<\scripts>
+[\server]
+[server]
+	port = 8084
+    body_size = 6666
+	</>
+		methods = GET
+	<\/>
+	<upload>
+		methods = GET POST DELETE
+	<\upload>
+	<scripts>
+		methods = GET POST
+	<\scripts>
+[\server]
+[server]
+	port = 8085
+    body_size = 6666
+	</>
+		methods = GET
+	<\/>
+	<upload>
+		methods = GET POST DELETE
+	<\upload>
+	<scripts>
+		methods = GET POST
+	<\scripts>
+[\server]
