sending in chunks works -> test with bigger files/stress test + CLEAN UP

--- a/default.conf
+++ b/default.conf
@@ -26,7 +26,8 @@ max_events = 100
 backlog = 10
 
 [server]
-	port = 8080
+	port = 2020
+
     body_size = 7777
 	</>
 
@@ -40,68 +41,68 @@ backlog = 10
 	<\scripts>
 [\server]
 
-[server]
-	port = 8081
-    body_size = 6666
-	</>
-		methods = GET
-	<\/>
-	<upload>
-		methods = GET POST DELETE
-	<\upload>
-	<scripts>
-		methods = GET POST
-	<\scripts>
-[\server]
-[server]
-	port = 8082
-    body_size = 6666
-	</>
-		methods = GET
-	<\/>
-	<upload>
-		methods = GET POST DELETE
-	<\upload>
-	<scripts>
-		methods = GET POST
-	<\scripts>
-[\server]
-[server]
-	port = 8083
-    body_size = 6666
-	</>
-		methods = GET
-	<\/>
-	<upload>
-		methods = GET POST DELETE
-	<\upload>
-	<scripts>
-		methods = GET POST
-	<\scripts>
-[\server]
-[server]
-	port = 8084
-    body_size = 6666
-	</>
-		methods = GET
-	<\/>
-	<upload>
-		methods = GET POST DELETE
-	<\upload>
-	<scripts>
-		methods = GET POST
-	<\scripts>
-[\server]
-[server]
-	port = 8085
-    body_size = 6666
-	</>
-		methods = GET
-	<\/>
-	<upload>
-		methods = GET POST DELETE
-	<\upload>
-	<scripts>
-		methods = GET POST
-	<\scripts>
-[\server]
+; [server]
+; 	port = 8081
+;     body_size = 6666
+; 	</>
+; 		methods = GET
+; 	<\/>
+; 	<upload>
+; 		methods = GET POST DELETE
+; 	<\upload>
+; 	<scripts>
+; 		methods = GET POST
+; 	<\scripts>
+; [\server]
+; [server]
+; 	port = 8082
+;     body_size = 6666
+; 	</>
+; 		methods = GET
+; 	<\/>
+; 	<upload>
+; 		methods = GET POST DELETE
+; 	<\upload>
+; 	<scripts>
+; 		methods = GET POST
+; 	<\scripts>
+; [\server]
+; [server]
+; 	port = 8083
+;     body_size = 6666
+; 	</>
+; 		methods = GET
+; 	<\/>
+; 	<upload>
+; 		methods = GET POST DELETE
+; 	<\upload>
+; 	<scripts>
+; 		methods = GET POST
+; 	<\scripts>
+; [\server]
+; [server]
+; 	port = 8084
+;     body_size = 6666
+; 	</>
+; 		methods = GET
+; 	<\/>
+; 	<upload>
+; 		methods = GET POST DELETE
+; 	<\upload>
+; 	<scripts>
+; 		methods = GET POST
+; 	<\scripts>
+; [\server]
+; [server]
+; 	port = 8085
+;     body_size = 6666
+; 	</>
+; 		methods = GET
+; 	<\/>
+; 	<upload>
+; 		methods = GET POST DELETE
+; 	<\upload>
+; 	<scripts>
+; 		methods = GET POST
+; 	<\scripts>
+; [\server]
