bit cleaned up-> continue2

--- a/default.conf
+++ b/default.conf
@@ -30,12 +30,11 @@ backlog = 10
 
     body_size = 7777
 	</>
-
 		methods = GET
 	<\/>
-	<upload>
-		methods = GET POST DELETE
-	<\upload>
+; 	<upload>
+; 		methods = GET POST DELETE
+; 	<\upload>
 	<scripts>
 		methods = GET POST
 	<\scripts>
