everything toggo, clean up Response.cpp next

--- a/default.conf
+++ b/default.conf
@@ -31,14 +31,26 @@ backlog = 10
     body_size = 7777
 	</>
 
-		methods = GET
+		methods = GET POST DELETE
 	<\/>
 	<upload>
 		methods = GET POST DELETE
 	<\upload>
 	<scripts>
-		methods = GET POST
+		methods = GET POST DELETE
 	<\scripts>
+[\server]
+[server]
+	port = 3030
+    body_size = 7777
+[\server]
+[server]
+	port = 4040
+    body_size = 7777
+[\server]
+[server]
+	port = 5050
+    body_size = 7777
 [\server]
 
 ; [server]
