--- a/default.conf
+++ b/default.conf
@@ -26,18 +26,18 @@ max_events = 100
 backlog = 10
 
 [server]
-	port = 2020
+	port = 3030
 
-    body_size = 7777
-	</>
-		methods = GET
-	<\/>
-; 	<upload>
-; 		methods = GET POST DELETE
-; 	<\upload>
-	<scripts>
-		methods = GET POST
-	<\scripts>
+    body_size = 20000
+; 	</>
+; 		methods = GET
+; 	<\/>
+; ; 	<upload>
+; ; 		methods = GET POST DELETE
+; ; 	<\upload>
+; 	<scripts>
+; 		methods = GET POST
+; 	<\scripts>
 [\server]
 
 ; [server]
