set timeout to 0 for non-blocking

--- a/default.conf
+++ b/default.conf
@@ -19,7 +19,7 @@
 # 	cgi
 # 	redirect
 
-timeout = -1
+timeout = 0 # A timeout value of 0 makes the poll call non-blocking. It returns immediately, and you can check the results to see if any file descriptors have events.
 max_clients = 100
 body_size = 9000
 max_events = 100
