--- a/default.conf
+++ b/default.conf
@@ -26,7 +26,7 @@ max_events = 100
 backlog = 10
 
 [server]
-	port = 3030
+	port = 2020
 
     body_size = 2000000
 ; 	</>
@@ -39,14 +39,14 @@ backlog = 10
 ; 		methods = GET POST
 ; 	<\scripts>
 [\server]
-[server]
-	port = 4040
-    body_size = 7777
-[\server]
-[server]
-	port = 5050
-    body_size = 7777
-[\server]
+# [server]
+# 	port = 4040
+#     body_size = 7777
+# [\server]
+# [server]
+# 	port = 5050
+#     body_size = 7777
+# [\server]
 
 ; [server]
 ; 	port = 8081
