BodySize Limit 8300000 and fixes

--- a/default.conf
+++ b/default.conf
@@ -21,14 +21,14 @@
 
 timeout = 0 # A timeout value of 0 makes the poll call non-blocking. It returns immediately, and you can check the results to see if any file descriptors have events.
 max_clients = 100
-body_size = 9000
+body_size = 8300000
 max_events = 100
 backlog = 10
 
 [server]
 	port = 2020
 
-    body_size = 2000000
+    body_size = 9300000
 ; 	</>
 ; 		methods = GET
 ; 	<\/>
@@ -39,14 +39,18 @@ backlog = 10
 ; 		methods = GET POST
 ; 	<\scripts>
 [\server]
-# [server]
-# 	port = 4040
-#     body_size = 7777
-# [\server]
-# [server]
-# 	port = 5050
-#     body_size = 7777
-# [\server]
+[server]
+	port = 3030
+    body_size = 7777
+[\server]
+[server]
+	port = 4040
+    body_size = 7777
+[\server]
+[server]
+	port = 5050
+    body_size = 7777
+[\server]
 
 ; [server]
 ; 	port = 8081
