--- a/default.conf
+++ b/default.conf
@@ -28,7 +28,7 @@ backlog = 10
 [server]
 	port = 2020
 
-    body_size = 2000000000000000
+    body_size = 2147483647 # max int
 ; 	</>
 ; 		methods = GET
 ; 	<\/>
