cgi cleaner now

--- a/default.conf
+++ b/default.conf
@@ -29,9 +29,10 @@ backlog = 10
 	port = 2020
 
     body_size = 2147483647 # max int
-; 	</>
-; 		methods = GET
-; 	<\/>
+; 	</images>
+; 		methods = POST
+; 		cgi = .py .pl
+; 	<\/images>
 ; ; 	<upload>
 ; ; 		methods = GET POST DELETE
 ; ; 	<\upload>
