fixed #34 , handled cases for </>

--- a/default.conf
+++ b/default.conf
@@ -29,15 +29,22 @@ backlog = 10
 	port = 2020
 
     body_size = 2147483647 # max int
-; 	</>
-; 		methods = GET
-; 	<\/>
-; ; 	<upload>
-; ; 		methods = GET POST DELETE
-; ; 	<\upload>
-; 	<scripts>
-; 		methods = GET POST
-; 	<\scripts>
+	</>
+		index = index.html
+		methods = POST GET
+	<\/>
+ 	</images>
+		autoindex = false
+ 		methods = POST GET
+		cgi = .py .pl
+ 	<\/images>
+ 	</upload>
+ 		methods = GET POST DELETE
+ 	<\/upload>
+ 	</scripts/test>
+		index = ge
+ 		methods = GET POST
+ 	<\/scripts/test>
 [\server]
 [server]
 	port = 3030
