small cosmetic fixes

--- a/default.conf
+++ b/default.conf
@@ -35,15 +35,14 @@ backlog = 10
 	<\/>
  	</images>
 		autoindex = false
- 		methods = POST GET
-		cgi = .py .pl
+ 		methods = GET
  	<\/images>
  	</upload>
  		methods = GET POST DELETE
  	<\/upload>
  	</scripts/test>
-		index = ge
  		methods = GET POST
+		cgi = .py .pl
  	<\/scripts/test>
 [\server]
 [server]
