--- a/default.conf
+++ b/default.conf
@@ -8,10 +8,8 @@
 # server
 # 	port
 # 	host
-#	root (not implemented)
-# 	server_name (not used)
 #	body_size
-# 	error_page
+# 	error_page 403 = path
 # location
 # 	methods
 # 	autoindex
@@ -19,7 +17,7 @@
 # 	cgi
 # 	redirect
 
-timeout = 0 # A timeout value of 0 makes the poll call non-blocking. It returns immediately, and you can check the results to see if any file descriptors have events.
+timeout = 0
 max_clients = 100
 body_size = 8300000
 max_events = 100
@@ -28,7 +26,7 @@ backlog = 10
 [server]
 	port = 2020
 
-    body_size = 2147483647 # max int
+    body_size = 2147483647
 	</>
 		index = index.html
 		methods = POST GET
@@ -40,10 +38,10 @@ backlog = 10
  	</upload>
  		methods = GET POST DELETE
  	<\/upload>
- 	</scripts/test>
+ 	</scripts>
  		methods = GET POST
 		cgi = .py .pl
- 	<\/scripts/test>
+ 	<\/scripts>
 [\server]
 [server]
 	port = 3030
@@ -57,69 +55,3 @@ backlog = 10
 	port = 5050
     body_size = 7777
 [\server]
-
-; [server]
-; 	port = 8081
-;     body_size = 6666
-; 	</>
-; 		methods = GET
-; 	<\/>
-; 	<upload>
-; 		methods = GET POST DELETE
-; 	<\upload>
-; 	<scripts>
-; 		methods = GET POST
-; 	<\scripts>
-; [\server]
-; [server]
-; 	port = 8082
-;     body_size = 6666
-; 	</>
-; 		methods = GET
-; 	<\/>
-; 	<upload>
-; 		methods = GET POST DELETE
-; 	<\upload>
-; 	<scripts>
-; 		methods = GET POST
-; 	<\scripts>
-; [\server]
-; [server]
-; 	port = 8083
-;     body_size = 6666
-; 	</>
-; 		methods = GET
-; 	<\/>
-; 	<upload>
-; 		methods = GET POST DELETE
-; 	<\upload>
-; 	<scripts>
-; 		methods = GET POST
-; 	<\scripts>
-; [\server]
-; [server]
-; 	port = 8084
-;     body_size = 6666
-; 	</>
-; 		methods = GET
-; 	<\/>
-; 	<upload>
-; 		methods = GET POST DELETE
-; 	<\upload>
-; 	<scripts>
-; 		methods = GET POST
-; 	<\scripts>
-; [\server]
-; [server]
-; 	port = 8085
-;     body_size = 6666
-; 	</>
-; 		methods = GET
-; 	<\/>
-; 	<upload>
-; 		methods = GET POST DELETE
-; 	<\upload>
-; 	<scripts>
-; 		methods = GET POST
-; 	<\scripts>
-; [\server]
